<resources>
    <string name="app_name">CaloSize</string>
    <string name="enter_name">Enter Name</string>

    <string name="section_name">CaloSize</string>
    <string name="sex">SEX:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="weight">WEIGHT:</string>
    <string name="in_kilogram">in kilogram</string>
    <string name="height">HEIGHT:</string>
    <string name="in_centimeter">in centimeter</string>
    <string name="age">AGE:</string>
    <string name="in_years">in years</string>
    <string name="activity">ACTIVITY:</string>
    <string name="calculate">CALCULATE</string>
    <string name="clear">CLEAR</string>
    <string name="result">RESULT:</string>
    <string name="this_application_uses_the_harris_benedict_equation_to_determine_the_calorie_intake">This application uses the harris benedict equation to determine the calorie intake.</string>
    <string name="label">calorie per day</string>

    <string-array name="activity">
        <item>Please Select an Item</item>
        <item>Sedentary (little or no exercise)</item>
        <item>Lightly active (light exercise or sports)</item>
        <item>Moderately active (moderate exercise or sports)</item>
        <item>Very active (hard exercise or sports)</item>
        <item>Extra active (very hard exercise or sports and physical job)</item>
    </string-array>

    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="female1">FEMALE</string>
    <string name="male1">MALE</string>
    <string name="age1">AGE</string>
    <string name="display_age">0</string>
    <string name="height1">HEIGHT</string>
    <string name="display_height">0</string>
    <string name="unit_height">cm</string>
    <string name="weight1">WEIGHT</string>
    <string name="display_weight">0</string>
    <string name="unit_weight">kg</string>
    <string name="calculate_bmi">Calculate your BMI</string>
    <string name="recalculate_bmi">Recalculate your BMI</string>
    <string name="save_bmi">SAVE</string>
    <string name="go_back">Go Back</string>
    <string name="result_text2">0</string>
    <string name="todo">TODO</string>

</resources>