<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6DAC4F"
    app:errorEnabled="true"
    tools:context=".MainActivity">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        app:itemBackground="@color/dark_green"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/menu_navigation" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bold"
        android:text="Calorie"
        android:textColor="#EFEFE8"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="47dp"
        android:layout_height="41dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003"
        app:srcCompat="@drawable/calories_calculator"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_regular"
        android:text="Calculator"
        android:textColor="#EFEFE8"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/info"
        android:layout_width="373dp"
        android:layout_height="47dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/white1"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/this_application_uses_the_harris_benedict_equation_to_determine_the_calorie_intake"
        android:textAlignment="center"
        android:textColor="@color/black1"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="372dp"
        android:layout_height="309dp"
        android:background="@drawable/calo_layout"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/tvSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/sex"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btCalo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.380"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155">

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/female"
            android:textAlignment="center"
            android:textColor="@color/dark_green"
            android:textColorHint="@color/dark_green"
            android:textSize="20dp"
            app:buttonTint="@color/dark_green" />

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/male"
            android:textAlignment="center"
            android:textColor="@color/dark_green"
            android:textColorHint="@color/dark_green"
            android:textSize="20dp"
            app:buttonTint="@color/dark_green" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/weight"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btCalo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="no"
        android:ems="8"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/in_kilogram"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textColorHint="@color/dark_green"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btCalo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/height"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btCalo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654" />

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="no"
        android:ems="8"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/in_centimeter"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textColorHint="@color/dark_green"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btCalo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/age"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btCalo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="no"
        android:ems="8"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/in_years"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textColorHint="@color/dark_green"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btCalo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <TextView
        android:id="@+id/tvActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/activity"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btCalo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="186dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/dark_green"
        android:fontFamily="@font/opensans_regular"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btCalo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <Button
        android:id="@+id/btCalo"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:background="@drawable/calculate_layout"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/calculate"
        android:textAlignment="center"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/btSaveData"
        android:layout_width="372dp"
        android:layout_height="49dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/calculate_layout"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/opensans_bold"
        android:text="SAVE DATA"
        android:textAlignment="center"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout7"
        app:layout_constraintVertical_bias="0.246" />

    <ImageView
        android:id="@+id/relativeLayout7"
        android:layout_width="372dp"
        android:layout_height="85dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/calo_layout"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout7"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/tVShow"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/opensans_bold"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toStartOf="@+id/label"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/label"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/label"
        android:textColor="@color/dark_green"
        android:textSize="28dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/clear_text"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="13dp"
        android:background="@drawable/calculate_layout"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/clear"
        android:textAlignment="center"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toEndOf="@+id/btCalo"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>